--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>BRAVO (PoC) — Agent Assist Widget</title>
+  <title>BRAVO (PoC) — Placeholder Version</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root { font-family: "Segoe UI", system-ui, Arial, sans-serif; }
@@ -10,181 +10,58 @@
     button { padding: 6px 10px; cursor: pointer; }
     textarea { width: 100%; box-sizing: border-box; }
     h3 { margin: 0 0 6px 0; }
-    .row { display: flex; gap: 8px; margin: 10px 0; flex-wrap: wrap; }
+    h4 { margin-top: 16px; }
     ul { margin: 6px 0 0 18px; }
     .badge { background: #e8e8e8; padding: 3px 6px; border-radius: 6px; font-size: 11px; }
   </style>
 </head>
 
 <body>
-  <h3>BRAVO (PoC) <span class="badge">static</span></h3>
+  <h3>BRAVO (PoC) <span class="badge">placeholder</span></h3>
 
-  <div class="row">
-    Conversation: <b id="convId">(loading…)</b>
+  <div style="margin: 8px 0;">
+    Conversation: <b id="convId">POC-CONV-12345</b>
   </div>
 
-  <div class="row">
-    <button id="btnRefresh">Refresh Context</button>
+  <div>
     <button id="btnInsert" disabled>Insert Suggested Reply</button>
   </div>
 
-  <div style="margin-top: 16px;">
-    <h4>Relevant Information</h4>
-    <ul id="relevantInfo"></ul>
+  <h4>Relevant Information</h4>
+  <ul id="relevantInfo">
+    <li><i>(Placeholder)</i> Customer mentioned an issue with their bill.</li>
+    <li><i>(Placeholder)</i> Customer recently changed plans.</li>
+  </ul>
 
-    <h4>Suggested Next Steps</h4>
-    <ul id="nextSteps"></ul>
+  <h4>Suggested Next Steps</h4>
+  <ul id="nextSteps">
+    <li><i>(Placeholder)</i> Verify customer identity.</li>
+    <li><i>(Placeholder)</i> Review recent plan changes.</li>
+    <li><i>(Placeholder)</i> Check billing history.</li>
+  </ul>
 
-    <h4>Suggested Reply</h4>
-    <textarea id="suggestedReply" rows="4" readonly></textarea>
-  </div>
+  <h4>Suggested Reply</h4>
+  <textarea id="suggestedReply" rows="4" readonly>
+(Placeholder) Thanks for reaching out! I can help check this for you. 
+Before I get started, can I please confirm a couple of details?
+  </textarea>
 
-  <div style="margin-top: 20px;">
-    <h4>Recent Messages</h4>
-    <ul id="msgs"></ul>
-    <small>
-      (Replace stub functions with LP Widget SDK:  
-      <code>context.activeConversationId()</code>,  
-      <code>api.getMessages()</code>,  
-      <code>api.setComposerText()</code>)
-    </small>
-  </div>
+  <script>
+    // Eventually replace this with:
+    // window.LPWidget.api.setComposerText({ conversationId, text });
 
-<script>
-  // =======================================================
-  //  STUBS — Replace with LivePerson Widget SDK
-  // =======================================================
-
-  async function getActiveConversationId() {
-    // Example LP SDK:
-    // return await window.LPWidget.context.activeConversationId();
-    return "POC-CONV-12345";
-  }
-
-  async function fetchTranscript(id, limit = 30) {
-    // Example LP SDK:
-    // return await window.LPWidget.api.getMessages({ conversationId: id, limit });
-    return [
-      { from: "customer", text: "Kia ora, my bill seems high this month." },
-      { from: "agent", text: "I can check that for you." },
-      { from: "customer", text: "I changed plans recently." }
-    ];
-  }
-
-  function insertIntoComposer(text) {
-    // LP SDK:
-    // window.LPWidget.api.setComposerText({ conversationId: state.convId, text });
-    alert("Would insert into composer:\n\n" + text);
-  }
-
-  // =======================================================
-  //  ANALYSIS LOGIC (Relevant Info / Next Steps / Reply)
-  // =======================================================
-
-  function extractRelevantInformation(messages) {
-    const info = [];
-    const lastCust = [...messages].reverse().find(m => m.from === "customer");
-
-    if (lastCust) info.push(`Last customer message: "${lastCust.text}"`);
-
-    if (messages.some(m => m.text.toLowerCase().includes("bill")))
-      info.push("Billing concern detected.");
-
-    if (messages.some(m => m.text.toLowerCase().includes("plan")))
-      info.push("Customer mentioned a plan change.");
-
-    return info;
-  }
-
-  function suggestNextSteps(messages) {
-    const steps = [];
-
-    if (messages.some(m => m.text.toLowerCase().includes("bill"))) {
-      steps.push("Verify the customer’s identity.");
-      steps.push("Check the last 2–3 bills for changes.");
-      steps.push("Review plan / promotions applied recently.");
+    function insertIntoComposer(text) {
+      alert("Would insert into composer:\n\n" + text);
     }
 
-    if (messages.some(m => m.text.toLowerCase().includes("plan"))) {
-      steps.push("Confirm the customer’s current plan.");
-      steps.push("Check the date of the last plan change.");
-    }
+    const replyBox = document.querySelector("#suggestedReply");
+    const insertBtn = document.querySelector("#btnInsert");
 
-    if (steps.length === 0)
-      steps.push("Clarify the customer's query and gather details.");
-
-    return steps;
-  }
-
-  function generateSuggestedReply(messages) {
-    const lastCust = [...messages].reverse().find(m => m.from === "customer");
-    const issue = lastCust?.text || "that";
-
-    return `Thanks for getting in touch. I can help with ${issue}. 
-Before I take a closer look, can I confirm a couple of details so I can securely access your account?`;
-  }
-
-  // =======================================================
-  //  STATE + RENDER
-  // =======================================================
-
-  const state = { convId: "", messages: [] };
-  const $ = (sel) => document.querySelector(sel);
-
-  function render() {
-    $("#convId").textContent = state.convId || "(none)";
-
-    // Messages
-    const msgList = $("#msgs");
-    msgList.innerHTML = "";
-    state.messages.forEach(m => {
-      const li = document.createElement("li");
-      li.innerHTML = `<b>${m.from}:</b> ${m.text}`;
-      msgList.appendChild(li);
+    insertBtn.disabled = false;
+    insertBtn.addEventListener("click", () => {
+      insertIntoComposer(replyBox.value);
     });
 
-    // Compute outputs
-    const info = extractRelevantInformation(state.messages);
-    const steps = suggestNextSteps(state.messages);
-    const reply = generateSuggestedReply(state.messages);
-
-    // Relevant Info
-    const ri = $("#relevantInfo");
-    ri.innerHTML = "";
-    info.forEach(i => {
-      const li = document.createElement("li");
-      li.textContent = i;
-      ri.appendChild(li);
-    });
-
-    // Next Steps
-    const ns = $("#nextSteps");
-    ns.innerHTML = "";
-    steps.forEach(s => {
-      const li = document.createElement("li");
-      li.textContent = s;
-      ns.appendChild(li);
-    });
-
-    // Suggested Reply
-    $("#suggestedReply").value = reply;
-    $("#btnInsert").disabled = !reply;
-  }
-
-  async function refreshContext() {
-    state.convId = await getActiveConversationId();
-    state.messages = await fetchTranscript(state.convId, 30);
-    render();
-  }
-
-  $("#btnRefresh").addEventListener("click", refreshContext);
-  $("#btnInsert").addEventListener("click", () => {
-    insertIntoComposer($("#suggestedReply").value);
-  });
-
-  // Load on startup
-  refreshContext();
-
-</script>
+  </script>
 </body>
 </html>
