--- a/index.html
+++ b/index.html
@@ -31,20 +31,19 @@
   <!-- Placeholder Panels -->
   <h4>Relevant Information</h4>
   <ul id="relevantInfo">
-    <li><i>(Placeholder)</i> Customer details or main issue summarised here.</li>
-    <li><i>(Placeholder)</i> Key fact relevant to the conversation.</li>
+    <li><i>(Placeholder)</i> A higher bill after a recent plan change is often due to a <b>transition bill</b> where customers can see pro‑rated charges from the old plan and new plan on the same bill.</li>
+    <li><i>(Placeholder)</i> A <b>Bill Estimator</b> tool is available internally to help estimate charges when customers change broadband plans.</li>
   </ul>
 
   <h4>Suggested Next Steps</h4>
   <ul id="nextSteps">
-    <li><i>(Placeholder)</i> Step 1 the advisor should take.</li>
-    <li><i>(Placeholder)</i> Step 2 the advisor should take.</li>
+    <li><i>(Placeholder)</i> Check in Spark CRM what plan the customer was on, what plan they moved to, and the <b>effective date of the change.</b></li>
+    <li><i>(Placeholder)</i> Compare the last bill and the current bill to identify <b>pro‑rated old plan charges/credits</b> and the <b>new plan charges</b>.</li>
   </ul>
 
   <h4>Suggested Reply</h4>
   <textarea id="suggestedReply" rows="4" readonly>
-(Placeholder) Thanks for getting in touch! I can help with that. 
-Can I please confirm a couple of details so I can securely access your account?
+(Placeholder) Thanks for letting me know you’ve changed plans – that’s really helpful. When a plan changes, the first bill afterwards can look higher because it can include part of your old plan, part of your new plan, and any credits or adjustments for the changeover. I’ll pull up your last bill and this month’s bill now and break down exactly what’s different so you can see what’s one‑off for the change and what your regular monthly cost will be going forward.
   </textarea>
 
   <!-- Latest Messages -->
@@ -120,3 +119,4 @@ Can I please confirm a couple of details so I can securely access your account?
 </script>
 </body>
 </html>
+
