--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <h3>BRAVO (PoC) <span class="badge">placeholder</span></h3>
+  <h3>BRAVO (PoC) <span class="badge">mock data</span></h3>
 
   <div style="margin: 8px 0;">
     Conversation: <b id="convId">(loading…)</b>
@@ -31,25 +31,25 @@
   <!-- Placeholder Panels -->
   <h4>Relevant Information</h4>
   <ul id="relevantInfo">
-    <li><i>(Placeholder)</i> A higher bill after a recent plan change is often due to a <b>transition bill</b> where customers can see pro‑rated charges from the old plan and new plan on the same bill.</li>
-    <li><i>(Placeholder)</i> A <b>Bill Estimator</b> tool is available internally to help estimate charges when customers change broadband plans.</li>
+    <li>A higher bill after a recent plan change is often due to a <b>transition bill</b> where customers can see pro‑rated charges from the old plan and new plan on the same bill.</li>
+    <li>A <b>Bill Estimator</b> tool is available internally to help estimate charges when customers change broadband plans.</li>
   </ul>
 
   <h4>Suggested Next Steps</h4>
   <ul id="nextSteps">
-    <li><i>(Placeholder)</i> Check in Spark CRM what plan the customer was on, what plan they moved to, and the <b>effective date of the change.</b></li>
-    <li><i>(Placeholder)</i> Compare the last bill and the current bill to identify <b>pro‑rated old plan charges/credits</b> and the <b>new plan charges</b>.</li>
+    <li>Check in Spark CRM what plan the customer was on, what plan they moved to, and the <b>effective date of the change.</b></li>
+    <li>Compare the last bill and the current bill to identify <b>pro‑rated old plan charges/credits</b> and the <b>new plan charges</b>.</li>
   </ul>
 
   <h4>Suggested Reply</h4>
   <textarea id="suggestedReply" rows="4" readonly>
-(Placeholder) Thanks for letting me know you’ve changed plans – that’s really helpful. When a plan changes, the first bill afterwards can look higher because it can include part of your old plan, part of your new plan, and any credits or adjustments for the changeover. I’ll pull up your last bill and this month’s bill now and break down exactly what’s different so you can see what’s one‑off for the change and what your regular monthly cost will be going forward.
+Thanks for letting me know you’ve changed plans – that’s really helpful. When a plan changes, the first bill afterwards can look higher because it can include part of your old plan, part of your new plan, and any credits or adjustments for the changeover. I’ll pull up your last bill and this month’s bill now and break down exactly what’s different so you can see what’s one‑off for the change and what your regular monthly cost will be going forward.
   </textarea>
 
   <!-- Latest Messages -->
   <h4>Latest Messages</h4>
   <ul id="msgs"></ul>
-  <small>(Replace stubbed functions with LP Widget SDK to fetch real messages)</small>
+  <small>(TODO - Replace stubbed functions with LP Widget SDK to fetch real messages)</small>
 
 <script>
   // =======================================================
@@ -119,4 +119,5 @@
 </script>
 </body>
 </html>
+
 
