--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     Checking LivePerson SDK…
   </div>
 
-  <h3>BRAVO (PoC) <span class="badge">mock data</span></h3>
+  <h3>BRAVO (PoC) <span class="badge">debug 1</span></h3>
 
   <div style="margin: 8px 0;">
     Conversation: <b id="convId">(loading…)</b>
@@ -240,4 +240,5 @@ refreshContext();
 
 </body>
 </html>
+
 
