--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 <body>
   <div id="sdkStatus"
        style="font:12px Segoe UI, Arial; color:#444; background:#f6f6f6; padding:6px 8px; margin:0 0 8px 0; border-radius:6px;">
-    Checking LivePerson SDK…
+    Initialising LivePerson SDK…
   </div>
 
-  <h3>BRAVO (PoC) <span class="badge">debug 1</span></h3>
+  <h3>BRAVO (PoC) <span class="badge">debug</span></h3>
 
   <div style="margin: 8px 0;">
-    Conversation: <b id="convId">(loading…)</b>
+    Conversation: <b id="convId">(none)</b>
   </div>
 
   <div style="margin: 10px 0;">
@@ -36,19 +36,19 @@
   <!-- Placeholder Panels -->
   <h4>Relevant Information</h4>
   <ul id="relevantInfo">
-    <li>A higher bill after a recent plan change is often due to a <b>transition bill</b> where customers can see pro‑rated charges from the old plan and new plan on the same bill.</li>
+    <li>A higher bill after a recent plan change is often due to a <b>transition bill</b> where customers can see pro-rated charges from the old plan and new plan on the same bill.</li>
     <li>A <b>Bill Estimator</b> tool is available internally to help estimate charges when customers change broadband plans.</li>
   </ul>
 
   <h4>Suggested Next Steps</h4>
   <ul id="nextSteps">
     <li>Check in Spark CRM what plan the customer was on, what plan they moved to, and the <b>effective date of the change.</b></li>
-    <li>Compare the last bill and the current bill to identify <b>pro‑rated old plan charges/credits</b> and the <b>new plan charges</b>.</li>
+    <li>Compare the last bill and the current bill to identify <b>pro-rated old plan charges/credits</b> and the <b>new plan charges</b>.</li>
   </ul>
 
   <h4>Suggested Reply</h4>
   <textarea id="suggestedReply" rows="4" readonly>
-Thanks for letting me know you’ve changed plans – that’s really helpful. When a plan changes, the first bill afterwards can look higher because it can include part of your old plan, part of your new plan, and any credits or adjustments for the changeover. I’ll pull up your last bill and this month’s bill now and break down exactly what’s different so you can see what’s one‑off for the change and what your regular monthly cost will be going forward.
+Thanks for letting me know you’ve changed plans – that’s really helpful. When a plan changes, the first bill afterwards can look higher because it can include part of your old plan, part of your new plan, and any credits or adjustments for the changeover. I’ll pull up your last bill and this month’s bill now and break down exactly what’s different so you can see what’s one-off for the change and what your regular monthly cost will be going forward.
   </textarea>
 
   <!-- Latest Messages -->
@@ -56,189 +56,135 @@ Thanks for letting me know you’ve changed plans – that’s really helpful. W
   <ul id="msgs"></ul>
   <small>(Powered by LivePerson Agent SDK)</small>
 
-
-  <!-- AGENT SDK: Load the required script -->
+  <!-- Agent SDK -->
   <script src="https://lpcdn.lpsnmedia.net/webagent/client-SDK.min.js"></script>
 
-<script>
-/* =======================================================
-   AGENT SDK STATUS INDICATOR
-   ======================================================= */
-(function () {
-  const $ = (sel) => document.querySelector(sel);
-  const statusEl = $("#sdkStatus");
+  <script>
+  /* =======================================================
+     DEBUG LOGGING
+     ======================================================= */
+  window.lpTag = window.lpTag || {};
+  lpTag.log = console.log;
 
-  function readStatus() {
-    if (window.lpTag?.agentSDK) return 'Agent SDK';
-    return 'No SDK detected';
-  }
+  const $ = sel => document.querySelector(sel);
 
-  function updateStatus(note) {
-    const mode = readStatus();
-    statusEl.textContent = `[${mode}] ${note || ''}`.trim();
-  }
-
-  // poll to see when the agent SDK loads
-  updateStatus('Waiting for injection…');
-  let ticks = 0;
-  const t = setInterval(() => {
-    updateStatus('Waiting for injection…');
-    if (readStatus() !== 'No SDK detected' || ++ticks > 20) clearInterval(t);
-  }, 500);
-})();
-
-
-/* =======================================================
-   AGENT SDK ONLY — the correct init flow
-   ======================================================= */
-async function waitForAgentSDK(timeoutMs = 8000) {
-  const start = Date.now();
-  while (Date.now() - start < timeoutMs) {
-    if (window.lpTag?.agentSDK) {
-      return;
+  /* =======================================================
+     SDK INIT
+     ======================================================= */
+  async function waitForSDK(timeout = 8000) {
+    const start = Date.now();
+    while (Date.now() - start < timeout) {
+      if (window.lpTag?.agentSDK) return;
+      await new Promise(r => setTimeout(r, 100));
     }
-    await new Promise(r => setTimeout(r, 100));
-  }
-  throw new Error('LivePerson Agent SDK not available in this iframe.');
-}
-
-async function initAgentSDK() {
-  await waitForAgentSDK();
-  try {
-    window.lpTag.agentSDK.init({});
-    console.log("[LP] agentSDK initialised");
-  } catch (e) {
-    console.error("[LP] agentSDK.init failed", e);
-  }
-}
-
-// Kick off init
-initAgentSDK();
-
-  
-  // Log whether the model publishes any values to common paths
-  function logOnce(path, label = path) {
-    try {
-      window.lpTag.agentSDK.bind(path, (d) => {
-        console.log(label + ':', d);
-        try { window.lpTag.agentSDK.unbind(path, arguments.callee); } catch {}
-      }, () => {});
-    } catch (e) {
-      console.warn('bind failed for', path, e);
-    }
+    throw new Error("AgentSDK not available");
   }
 
-  // Most useful paths to probe
-  logOnce('conversationInfo', 'conversationInfo');
-  logOnce('conversationTranscript.lines', 'conversationTranscript.lines');
-  logOnce('chatTranscript.lines', 'chatTranscript.lines');
-  logOnce('visitorInfo', 'visitorInfo');
+  async function initSDK() {
+    await waitForSDK();
+    lpTag.agentSDK.init();
+    $("#sdkStatus").textContent = "Agent SDK initialised";
+    console.log("[LP] AgentSDK initialised");
+  }
 
+  /* =======================================================
+     CONTEXT (GLOBAL WIDGET)
+     ======================================================= */
+  async function getActiveConversationId() {
+    const ctx = await lpTag.agentSDK.getContext();
+    console.log("[LP] Context:", ctx);
 
+    if (!ctx?.currentConversation) return "";
+    return ctx.currentConversation.conversationId;
+  }
 
-/* =======================================================
-   AGENT SDK HELPERS
-   ======================================================= */
+  async function fetchTranscript(convId, limit = 5) {
+    if (!convId) return [];
 
-// 1) Get active conversation ID using bind
-async function getActiveConversationId() {
-  await initAgentSDK();
-  return await new Promise((resolve) => {
-    const cb = (data) => {
-      try { window.lpTag.agentSDK.unbind('conversationInfo', cb); } catch {}
-      const v = data?.newValue || data || {};
-      resolve(v.conversationId || v.conversationID || '');
-    };
-    window.lpTag.agentSDK.bind('conversationInfo', cb, () => resolve(''));
-  });
-}
+    const lines = await lpTag.agentSDK.get("conversationTranscript.lines");
+    if (!Array.isArray(lines)) return [];
 
+    return lines.slice(-limit).map(line => {
+      const by = (line.source || "").toLowerCase();
+      const from =
+        by.includes("agent") ? "agent" :
+        by.includes("bot")   ? "bot"   :
+                               "customer";
 
-// 2) Fetch transcript (last N lines)
-async function fetchTranscript(convId, limit = 5) {
-  await initAgentSDK();
+      return { from, text: line.text || "" };
+    });
+  }
 
-  const getOnce = (path) => new Promise(res => {
-    window.lpTag.agentSDK.get(path, d => res(d), () => res(null));
-  });
-
-  const data = (await getOnce('conversationTranscript.lines')) ||
-               (await getOnce('chatTranscript.lines')) ||
-               [];
-
-  if (!Array.isArray(data)) return [];
-
-  return data.slice(-limit).map(line => {
-    const by = (line.source || line.by || '').toLowerCase();
-    const from = by.includes('agent') ? 'agent'
-              : by.includes('bot')   ? 'bot'
-              : 'customer';
-    return { from, text: line.text || line.message || '' };
-  });
-}
-
-
-// 3) Insert text into composer
-async function insertIntoComposer(text) {
-  await initAgentSDK();
-
-  const cmd = (name) =>
-    new Promise(r =>
-      window.lpTag.agentSDK.command(
-        name,
-        { text },
-        () => r(true),
-        () => r(false)
-      )
+  /* =======================================================
+     COMPOSER
+     ======================================================= */
+  async function insertIntoComposer(text) {
+    lpTag.agentSDK.command(
+      "Write ChatLine",
+      { text },
+      () => console.log("[LP] Text inserted"),
+      err => console.warn("[LP] Insert failed", err)
     );
+  }
 
-  if (await cmd('SendText')) return;
-  await cmd('Write ChatLine');
-}
+  /* =======================================================
+     STATE + RENDER
+     ======================================================= */
+  const state = { convId: "", messages: [] };
 
+  function render() {
+    $("#convId").textContent = state.convId || "(none)";
 
-/* =======================================================
-   STATE + RENDER
-   ======================================================= */
+    const msgList = $("#msgs");
+    msgList.innerHTML = "";
+    state.messages.forEach(m => {
+      const li = document.createElement("li");
+      li.innerHTML = `<b>${m.from}:</b> ${m.text}`;
+      msgList.appendChild(li);
+    });
 
-const state = { convId: "", messages: [] };
-const $ = (sel) => document.querySelector(sel);
+    $("#btnInsert").disabled = !$("#suggestedReply").value.trim();
+  }
 
-function render() {
-  $("#convId").textContent = state.convId || "(none)";
+  async function refreshContext() {
+    try {
+      state.convId = await getActiveConversationId();
+      state.messages = await fetchTranscript(state.convId, 5);
+      render();
+    } catch (e) {
+      console.error("refreshContext failed", e);
+    }
+  }
 
-  const msgList = $("#msgs");
-  msgList.innerHTML = "";
-  state.messages.forEach(m => {
-    const li = document.createElement("li");
-    li.innerHTML = `<b>${m.from}:</b> ${m.text}`;
-    msgList.appendChild(li);
+  /* =======================================================
+     EVENTS
+     ======================================================= */
+  $("#btnRefresh").addEventListener("click", refreshContext);
+  $("#btnInsert").addEventListener("click", () => {
+    insertIntoComposer($("#suggestedReply").value);
   });
 
-  const replyText = $("#suggestedReply").value.trim();
-  $("#btnInsert").disabled = !replyText;
-}
+  /* =======================================================
+     BOOTSTRAP
+     ======================================================= */
+  (async function bootstrap() {
+    try {
+      await initSDK();
+      await refreshContext();
 
-async function refreshContext() {
-  try {
-    state.convId = await getActiveConversationId();
-    state.messages = await fetchTranscript(state.convId, 5);
-    render();
-  } catch (e) {
-    console.error("refreshContext failed", e);
-  }
-}
-
-$("#btnRefresh").addEventListener("click", refreshContext);
-$("#btnInsert").addEventListener("click", () => {
-  insertIntoComposer($("#suggestedReply").value);
-});
-
-// Load immediately
-refreshContext();
-</script>
-
+      // Rebind when agent switches conversations
+      lpTag.agentSDK.subscribe(
+        lpTag.agentSDK.EVENTS.AGENT_CONTEXT,
+        () => {
+          console.log("[LP] Agent context changed");
+          refreshContext();
+        }
+      );
+    } catch (e) {
+      console.error("Bootstrap failed", e);
+      $("#sdkStatus").textContent = "Agent SDK failed to load";
+    }
+  })();
+  </script>
 </body>
 </html>
-
-
